--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
             <div class="relative dropdown">
                 <button class="font-semibold" onclick="toggleDropdown(event)">Resources</button>
                 <div class="dropdown-menu bg-white shadow-lg rounded-md mt-0 py-2 w-48">
-                    <a href="https://github.com/Bhart-Verma/ceh-notes/blob/main/ceh-notes.md" target="_blank" class="block px-4 py-2 text-gray-700 hover:bg-teal-100 hover:text-teal-600">CEH Notes</a>
+                    <a href="https://github.com/CyberBhart/CEH-Notes" target="_blank" class="block px-4 py-2 text-gray-700 hover:bg-teal-100 hover:text-teal-600">CEH Notes</a>
+                    <a href="https://github.com/CyberBhart/LLM-Testing-Guides" target="_blank" class="block px-4 py-2 text-gray-700 hover:bg-teal-100 hover:text-teal-600">LLM Testing</a>
+                    <a href="https://github.com/CyberBhart/Web-Testing-Guides" target="_blank" class="block px-4 py-2 text-gray-700 hover:bg-teal-100 hover:text-teal-600">Web Testing</a>
                     <a href="https://www.revshells.com/" target="_blank" class="block px-4 py-2 text-gray-700 hover:bg-teal-100 hover:text-teal-600">Reverse Shell Generator</a>
                     <a href="https://acorzo1983.github.io/HashCatCG/" target="_blank" class="block px-4 py-2 text-gray-700 hover:bg-teal-100 hover:text-teal-600">HashCat Command Generator</a>
                     <a href="https://acorzo1983.github.io/SQLMapCG/" target="_blank" class="block px-4 py-2 text-gray-700 hover:bg-teal-100 hover:text-teal-600">SQLMap Command Generator</a>
